[MRNT-4] Improved chat visuals and fixed markdown whitespace rendering.

--- a/src/app/components/chat/chat.component.scss
+++ b/src/app/components/chat/chat.component.scss
@@ -43,6 +43,10 @@
               background-color: rgba(33, 37, 41, 0.5);
               border-radius: var(--bs-border-radius)
             }
+
+            & > p:last-child {
+              margin-bottom: 0;
+            }
           }
         }
       }
@@ -91,6 +95,10 @@
         border-radius: 16px;
         border: none;
         height: auto;
+
+        &:focus-visible {
+          outline: 2px solid #3d0a91;
+        }
       }
 
       .send-button {
